--- a/.upptimerc.yml
+++ b/.upptimerc.yml
@@ -24,8 +24,8 @@ status-website:
   # Add your custom domain name, or remove the `cname` line if you don't have a domain
   # Uncomment the `baseUrl` line if you don't have a custom domain and add your repo name there
   # cname: demo.upptime.js.org
-  # baseUrl: /estatus
-  cname: t1.dapenlinea.com
+  baseUrl: /estatus
+  # cname: t1.dapenlinea.com
   logoUrl: https://berlinserver.github.io/IconWhite.png
   theme: light
   name: DAPLive
